syntax  = "proto3";

package assingment4;

service UserService {
  rpc CreateUser(User) returns (CreateUserResponse);
  rpc GetUser(GetUserByIdRequest) returns (User);
  rpc ListUsers(EmptyRequest) returns (UserList);
}

message EmptyRequest {}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message UserList {
    repeated User users = 1;
}

message GetUserByIdRequest {
    int32 id = 1;
}

message CreateUserResponse {
    int32 userId = 1;
}